prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/type_inference/test_comparison_to_int.diag.txt
ERROR: expression of type 'bool' cannot be assigned to type 'int'
testData/diagnostics/compilation_errors/type_inference/test_comparison_to_int.nut:4:0

local b: int = 20
local c: int = a > b
^-------------------
return c


